--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <tr>
         <th><strong>Home</th></strong>
         <th><strong>About</th></strong>
-        <th><strong>Products</th></strong>
+        <a href = "secondpage.html" href ="Products"> Products </a>
         <th><strong>Plants Care</th></strong>
         <th><strong>Contact</th></strong>
     </tr>
@@ -36,10 +36,51 @@
         See more
     </section>
     <div class="image">
-        <img src="image.png" alt="image1"
-        class="imagePosition" />
+        <img src="image.png" alt="Sample Image" class="imagePosition" >
+    </div>
+    <div class="image1">
+        <img src="image1.png" alt="Sample Image" class="first-image">
+    </div>
+    <div class="star-image">
+        <img src="star.png" alt="Sample Image" class="star-image">
+    </div>
+    <div class="social-icons">
+        <img src="Social icons.png" alt="Sample Image" class="social-icons">
+    </div>
+    <h3 class="text3">CHOOSE YOUR PLANT TODAY</h3>
+    <hr class="text3">
+    </div>
+    <div class="products">
+        <image class="product1">
+               <img src="Product 1.png" alt="Sample Image">
+        <image class="product2">
+                <img src="Product 2.png" alt="Sample Image">
+        <img src="Product 3.png" alt="Sample Image">
+        <img src="Product 4.png" alt="Sample Image">
+        <img src="Product 5.png" alt="Sample Image">
+        <img src="Product 6.png" alt="Sample Image">
     </div>
 </main>
+    <footer>
+        <h4 class="footer">Footer</h4> 
+        <a href="assignment11.html" class="right-link">See more</a>
+        <div class="box">
+        <h3 class="GoGreen">GoGreen</h3>
+        <nav class="navclass1">
+            <tr class="tr">
+                <th><strong>COMPANY</th></strong>
+                <th><strong>SUPPORT</th></strong>
+                <th><strong>PLANT QUESTIONS</th></strong>
+            </tr>
+        <hr class="divider1"></hr>
+        </nav>
+        <nav class="navclass2">
+            <tr class="tr">
+                <th><strong>Terms</th></strong>
+                <th><strong>Privacy Policy</th></strong>
+                <th><strong>Accessibility</th></strong>
+            </tr>   
+    </footer>
  </body>
  </html>
 
